...
    titleLabel.text = @"ceshi xia";
    [self.contentView addSubview:self.titleLabel = titleLabel];
    
    UILabel *lastMessageLabel = [[UILabel alloc] init];
    lastMessageLabel.font = [UIFont systemFontOfSize:12.0f];
    lastMessageLabel.textColor = [UIColor lightGrayColor];
    lastMessageLabel.text= @"最好赛";
    [self.contentView addSubview:self.lastMessageLabel = lastMessageLabel];
    
    UILabel *timeLabel = [[UILabel alloc] init];
    timeLabel.font = [UIFont systemFontOfSize:10.0f];
    timeLabel.textColor = [UIColor lightGrayColor];
    timeLabel.text = @"2015- dsa";
...
