...
- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view.
    
    [self.navigationController.navigationBar setBackgroundImage:[UIImage new] forBarMetrics:UIBarMetricsCompact];
    
    self.navigationItem.title = @"XMFraker";
    
    self.dataArray = [NSMutableArray array];
    
    [self.view addSubview:self.tableView];
    
    [self.view updateConstraintsIfNeeded];
...
