...
    </dependencies>
    <scenes>
        <!--Item-->
        <scene sceneID="dLs-V6-MjD">
            <objects>
                <navigationController id="Olp-eR-VzG" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="CXB-g5-joA"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="O5M-x7-Y4b">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="rvb-tL-SkF" kind="relationship" relationship="rootViewController" id="VX5-Tj-yiz"/>
...
